--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <!-- 联系方式 -->
             <section class="blog info-unit">
                 <h2>
-                    <i class="fa fa-phone" aria-hidden="true"></i>个人博客</h2>
+                    <i class="fa fa-archive" aria-hidden="true"></i>个人博客</h2>
                 <hr/>
                 <ul>
                     <li>
@@ -233,7 +233,7 @@
             <!-- 专业技能 -->
             <section class="skill info-unit">
                 <h2>
-                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>专业技能</h2>
+                    <i class="fa fa-code" aria-hidden="true"></i>专业技能</h2>
                 <hr/>
                 <ul>
                     <li>
@@ -451,10 +451,10 @@
     <aside>
         <ul>
             <li>
-                <a href="https://gitee.com/itsay/resume" target="_blank">源代码</a>
+                <a href="https://gitee.com/lihhz/resume" target="_blank">源代码</a>
             </li>
             <li>
-                <a href="http://if2er.com/" target="_blank">Blog</a>
+                <a href="https://blog.csdn.net/qq_30682027" target="_blank">Blog</a>
             </li>
         </ul>
     </aside>
