--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="header"></header>
 
     <article class="container">
-        <section class="side" id="side">
+        <section class="side" id="side" style="position: fixed">
 
             <!-- 左栏固定开关，记得及时删除这段代码 Start-->
             <label class="switch" style="display: none;" onchange="switchFixed()">
@@ -184,6 +184,14 @@
                         <label>Node.js</label>
                         <progress value="70" max="100"></progress>
                     </li>
+                    <li>
+                        <label>Markdown</label>
+                        <progress value="90" max="100"></progress>
+                    </li>
+                    <li>
+                        <label>Photoshop</label>
+                        <progress value="60" max="100"></progress>
+                    </li>
                 </ul>
             </section>
 
@@ -315,13 +323,18 @@
                             <time>2017.4-至今</time>
                         </h3>
                         <ul class="info-content">
-                            <li>技术栈：Spring+Spring MVC+Mybatis+Bootstrap+KnockoutJs+Quartz+Oracle数据库</li>
+                            <li>
+                                <i class="fa fa-cubes" aria-hidden="true"></i>
+                                [技术栈]：Spring+Spring MVC+Mybatis+Bootstrap+KnockoutJs+Quartz+Oracle数据库</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                [项目描述]全国事务所、分所的设立、变更、终止；全国注师的注册、审批；财政用户审批；事务所年度报备等
+                                [项目描述]全国事务所、分所的设立、变更、终止迁移及证书打印；股东合伙人管理；全国注师的注册、审批；各级财政用户审批；事务所、分所年度报备、业务报备；报表信息查询；行政处罚管理；公示公告管理
                                 <br/>
                                 <i class="fa fa-users" aria-hidden="true"></i>
-                                [责任描述]负责系统设计、技术选择；核心功能编码、测试、维护
+                                [责任描述]负责Web系统设计、技术选择、基础框架搭建；核心功能编码、测试、维护
+                                <br/>
+                                <i class="fa fa-book" aria-hidden="true"></i>
+                                [自学内容]在项目中边学习边使用：Bootstrap+KnockoutJs+RequireJs+JQuery+Quartz 分布式定时任务+Memcached分布式开发，还有就是以前用的都是Eclipse，在项目中通过同事的帮助学习了Intellij Idea的使用，触类旁通，学会使用Webstorm；个人兴趣：Vue/Vuex/Vue Router+React+NodeJs+Express+Webpack+ES 6；也学习了Python，可以开发出一些实用的脚本了；也学习了Git的使用，这个就让我开始了自我放飞的代码生涯了；将自己平时积累的、遇到的问题公布到CSDN博客，和广大同袍分享。
                             </li>
                         </ul>
                     </li>
@@ -331,33 +344,17 @@
                             <time>2016.8-2017.3</time>
                         </h3>
                         <ul class="info-content">
-                            <li>技术栈：Hibernate+Quartz+Oracle数据库；公司F3平台</li>
+                            <li><i class="fa fa-cubes" aria-hidden="true"></i>
+                                [技术栈]：Hibernate+Quartz+Oracle数据库；公司F3平台</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [项目描述]每年财政部年度指标的接入，计划生成等
                                 <br/>
                                 <i class="fa fa-users" aria-hidden="true"></i>
                                 [责任描述]负责新需求的开发，参与平常的技术维护。
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <h3>
-                            <span>[项目3]<a target="_blank" href="http://www.fjhtxl.cn/">车联网应用服务平台</a></span>
-                            <!--<span class="link">-->
-                            <!--<a href="#" target="_blank">Demo</a>-->
-                            <!--</span>-->
-                            <time>2014.8-2015.4</time>
-                        </h3>
-                        <ul class="info-content">
-                            <li>技术栈：Spring+Spring MVC+Hibernate+ExtJs+Oralce 数据库+Quartz</li>
-                            <li>
-                                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                [项目描述]通过车载终端上传企业或者车队的GPS或北斗信息，通过中间组件（鸿泉网关）经行实时数据入库，从而为车企用户提供车辆监控、数据统计分析、报警通知等服务
                                 <br/>
-                                <i class="fa fa-users" aria-hidden="true"></i>
-                                [责任描述]负责web中统计分析的开发，使用ExtJs进行展现，Spring MVC和hibernate进行逻辑处理；后期使用cxf开发PC客户端使用到的数据接口并进行维护；并开发单独的Java project为车企用户提供离上线、报警等短信通知服务
+                                <i class="fa fa-book" aria-hidden="true"></i>
+                                [自学内容]巩固了Sql基础；学习了Oracle数据库存储过程和函数的使用
                             </li>
                         </ul>
                     </li>
@@ -365,40 +362,48 @@
                     <ul class="info-content">
                         <li>
                             <h3>
-                                <span>[项目4]<mark title="可在微信中关注">航天星联V服务</mark></span>
+                                <span>[项目3]<mark title="可在微信中关注">航天星联V服务</mark></span>
                                 <!--<span class="link">-->
                                 <!--<a href="#" target="_blank">Demo</a>-->
                                 <!--</span>-->
                                 <time>2015.6-2015.8</time>
                             </h3>
                             <ul class="info-content">
-                                <li>技术栈：微信JS-SDK+Jquery Mobile</li>
+                                <li><i class="fa fa-cubes" aria-hidden="true"></i>
+                                    [技术栈]：微信JS-SDK+Jquery Mobile</li>
                                 <li>
                                     <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                     [项目描述]航天星联车联网应用服务平台的微信公众号开发，为企业用户提供每周推送推荐内容、车辆监控、资讯社区和航天星联公司简介等。车企用户可在微信中进行车辆查询及车辆监控以及APP下载等，还可以进行对航天星联公司的了解和反馈等
                                     <br/>
                                     <i class="fa fa-users" aria-hidden="true"></i>
                                     [责任描述]负责二期开发。参与了二期需求的研讨；在一期已有的项目中添加了APP下载、问题反馈等功能的实现。并在后台添加了反馈信息的查询
+                                    <br/>
+                                    <i class="fa fa-book" aria-hidden="true"></i>
+                                    [自学内容]第一次也是唯一一次开发微信相关东西，感觉也挺有意思。在项目中学习并使用：Jquery Mobile+微信JS-SDK;巩固JavaScript、Html、Css基础
                                 </li>
                             </ul>
                         </li>
 
                         <li>
                             <h3>
-                                <span>[项目5]<mark>福建省新能源车量联网监控平台</mark></span>
+                                <span>[项目4]<mark>福建省新能源车量联网监控平台</mark></span>
                                 <!--<span class="link">-->
                                 <!--<a href="#" target="_blank">Demo</a>-->
                                 <!--</span>-->
                                 <time>2015.11-2016.8</time>
                             </h3>
                             <ul class="info-content">
-                                <li>技术栈：Spring+Spring MVC+Easy UI+MySQL 数据库+C#+MySQL 优化</li>
+                                <li><i class="fa fa-cubes" aria-hidden="true"></i>
+                                    [技术栈]：Spring+Spring MVC+Easy UI+MySQL 数据库+C#+MySQL 优化</li>
                                 <li>
                                     <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                     [项目描述]福建省所有新能源车辆的实时、报警及注册数据通过其它车企平台接入福建省新能源汽车运行监控平台。实现对车辆的监控管理、车辆数据的统计分析和基础平台信息的管理等
                                     <br/>
                                     <i class="fa fa-users" aria-hidden="true"></i>
                                     [责任描述]前期MySQL数据库的建立，通过C#开发中间组件（网关）接收其它车企传输的车辆注册、实时数据和报警数据并写入MySQL数据库；后期使用Java开发web页面，对接入的数据进行展示和统计分析并测试，数据量累积时中间组件批量插入MySQL数据库的性能调优、死锁处理，优化MySQL及sql语句解决web页面因数据量过多导致的查询性能低下，编写文档等
+                                    <br/>
+                                    <i class="fa fa-book" aria-hidden="true"></i>
+                                    [自学内容]在项目中学习并使用：Easy UI+C#+MySQL+MySQL优化，感觉比较有用的是MySQL的优化，因为数据量比较大，频繁遇到死锁问题，所以印象还是蛮时刻的；C#因为项目的原因学了下，但是不是很深入;个人兴趣：学习了很久的C/C++语言，但是好久没用，忘完了；开始使用为知笔记、印象笔记等笔记工具记录平时开发遇到的问题
                                 </li>
                             </ul>
                         </li>
@@ -412,18 +417,48 @@
                                 <time>2016.4-2016.5</time>
                             </h3>
                             <ul class="info-content">
-                                <li>技术栈：Spring+Spring MVC+Easy UI+解析SOS设备、船舶或者岸上基站上报的数据并批量保存到MySQL数据库中</li>
+                                <li><i class="fa fa-cubes" aria-hidden="true"></i>
+                                    [技术栈]：Spring+Spring MVC+Easy UI+解析SOS设备、船舶或者岸上基站上报的数据并批量保存到MySQL数据库中</li>
                                 <li>
                                     <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                     [项目描述]船员携带的SOS设备落水后通过船或者岸上基站上报紧急信号，监控人员可以在web页面查看并采取紧急措施；船舶出港或进港会通过岸上基站上报位置信息，从而实现对船舶的进出港管理
                                     <br/>
                                     <i class="fa fa-users" aria-hidden="true"></i>
                                     [责任描述]负责中间件的开发。使用C#编写程序，解析SOS设备、船舶或者岸上基站上报的数据并批量保存到MySQL数据库中。
+                                    <br/>
+                                    <i class="fa fa-book" aria-hidden="true"></i>
+                                    [自学内容]接触该项目时间不长。主要是有部分硬件参与，还是挺有意思的。
                                 </li>
                             </ul>
                         </li>
 
-                </ul>
+
+                        <li>
+                            <h3>
+                                <span>[项目3]<a target="_blank" href="http://www.fjhtxl.cn/">车联网应用服务平台</a></span>
+                                <!--<span class="link">-->
+                                <!--<a href="#" target="_blank">Demo</a>-->
+                                <!--</span>-->
+                                <time>2014.8-2015.4</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li><i class="fa fa-cubes" aria-hidden="true"></i>
+                                    [技术栈]：Spring+Spring MVC+Hibernate+ExtJs+Oralce 数据库+Quartz</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [项目描述]通过车载终端上传企业或者车队的GPS或北斗信息，通过中间组件（鸿泉网关）经行实时数据入库，从而为车企用户提供车辆监控、数据统计分析、报警通知等服务
+                                    <br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    [责任描述]负责web中统计分析的开发，使用ExtJs进行展现，Spring MVC和hibernate进行逻辑处理；后期使用cxf开发PC客户端使用到的数据接口并进行维护；并开发单独的Java project为车企用户提供离上线、报警等短信通知服务
+                                    <br/>
+                                    <i class="fa fa-book" aria-hidden="true"></i>
+                                    [自学内容]这个项目是自己接触过的第一个项目。现在还记得看到自己开发功能上线时的心情……在项目中学习并使用：SVN版本控制工具+Quartz定时任务+ExtJs+Spring MVC;巩固JavaScript、Html、Css基础；巩固Plsql、eclipse等工具的使用，期间想尝鲜Intellij Idea，可惜失败了。
+                                </li>
+                            </ul>
+                        </li>
+
+
+                    </ul>
             </section>
 
             <!-- 自我评价 -->
