--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <header class="header"></header>
 
     <article class="container">
-        <section class="side" id="side" style="position: fixed">
+        <section class="side" id="side" style="position: absolute">
 
             <!-- 左栏固定开关，记得及时删除这段代码 Start-->
-            <label class="switch" style="display: none;" onchange="switchFixed()">
+            <label title="点击固定左侧栏" class="switch" style="display: none;" onchange="switchFixed()">
                 <script type="text/javaScript">
                     function switchFixed(){
                         var value = document.getElementById('side').style.position === 'fixed' ? 'absolute' : 'fixed';
@@ -244,7 +244,7 @@
                     <i class="fa fa-code" aria-hidden="true"></i>专业技能</h2>
                 <hr/>
                 <ul>
-                    <li>
+                    <li style="list-style: none">
                         <ul class="info-content">
                             <li>熟悉VueJs、Vue Router、Vuex等</li>
                             <li>熟悉React</li>
@@ -334,7 +334,7 @@
                                 [责任描述]负责Web系统设计、技术选择、基础框架搭建；核心功能编码、测试、维护
                                 <br/>
                                 <i class="fa fa-book" aria-hidden="true"></i>
-                                [自学内容]在项目中边学习边使用：Bootstrap+KnockoutJs+RequireJs+JQuery+Quartz 分布式定时任务+Memcached分布式开发，还有就是以前用的都是Eclipse，在项目中通过同事的帮助学习了Intellij Idea的使用，触类旁通，学会使用Webstorm；个人兴趣：Vue/Vuex/Vue Router+React+NodeJs+Express+Webpack+ES 6；也学习了Python，可以开发出一些实用的脚本了；也学习了Git的使用，这个就让我开始了自我放飞的代码生涯了；将自己平时积累的、遇到的问题公布到CSDN博客，和广大同袍分享。
+                                [自学内容]在项目中边学习边使用：Bootstrap+KnockoutJs+RequireJs+JQuery+Quartz 分布式定时任务+Memcached分布式开发，还有就是以前用的都是Eclipse，在项目中通过同事的帮助学习了Intellij Idea的使用，触类旁通，学会使用Webstorm；个人兴趣：Vue/Vuex/Vue Router+React+NodeJs+Express+Webpack+ES 6；也学习了Python，可以开发出一些实用的脚本了；也学习了Git的使用，这个就让我开始了自我放飞的代码生涯了；将自己平时积累的、遇到的问题公布到CSDN博客，和广大同袍分享；学习了Wireshark抓包工具还有Photoshop的使用。
                             </li>
                         </ul>
                     </li>
@@ -403,7 +403,7 @@
                                     [责任描述]前期MySQL数据库的建立，通过C#开发中间组件（网关）接收其它车企传输的车辆注册、实时数据和报警数据并写入MySQL数据库；后期使用Java开发web页面，对接入的数据进行展示和统计分析并测试，数据量累积时中间组件批量插入MySQL数据库的性能调优、死锁处理，优化MySQL及sql语句解决web页面因数据量过多导致的查询性能低下，编写文档等
                                     <br/>
                                     <i class="fa fa-book" aria-hidden="true"></i>
-                                    [自学内容]在项目中学习并使用：Easy UI+C#+MySQL+MySQL优化，感觉比较有用的是MySQL的优化，因为数据量比较大，频繁遇到死锁问题，所以印象还是蛮时刻的；C#因为项目的原因学了下，但是不是很深入;个人兴趣：学习了很久的C/C++语言，但是好久没用，忘完了；开始使用为知笔记、印象笔记等笔记工具记录平时开发遇到的问题
+                                    [自学内容]在项目中学习并使用：Easy UI+C#+MySQL+MySQL优化，感觉比较有用的是MySQL的优化，因为数据量比较大，频繁遇到死锁问题，所以印象还是蛮时刻的；C#因为项目的原因学了下，但是不是很深入;个人兴趣：学习了很久的C/C++语言，但是好久没用，忘完了；开始使用为知笔记、印象笔记等笔记工具记录平时开发遇到的问题；学会抓包工具IPtool的使用
                                 </li>
                             </ul>
                         </li>
