添加个人简历的下载链接

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                 <hr/>
                 <ul>
                     <li>
+                        <label>个人简历</label>
+                        <span><a href="./assets/file/李欢欢_3年.docx">李欢欢的简历</a></span>
+                    </li>
+                    <li>
                         <label>个人信息</label>
                         <span>李欢欢 / 男</span>
                     </li>
@@ -99,7 +103,7 @@
                         <span>河南 / 汉族</span>
                     </li>
                     <li>
-                        <label> 居住地</label>
+                        <label>居住地</label>
                         <span>北京 / 海淀</span>
                     </li>
                 </ul>
