--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     browserRedirect();
                     function switchFixed(){
                         var sideDom = document.getElementById('side');
+                        alert(isPC());
                         if(isPC()){
                             sideDom.style.position = sideDom.style.position === 'fixed' ? 'absolute' : 'fixed';
                         }else{
