不自动换行，加空格

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <ul class="info-content">
                             <li>
                                 <i class="fa fa-cubes" aria-hidden="true"></i>
-                                [技术栈]：Spring+Spring MVC+Mybatis+Bootstrap+KnockoutJs+Quartz+Oracle数据库</li>
+                                [技术栈]：Spring + Spring MVC + Mybatis + Bootstrap + KnockoutJs + Quartz + Oracle数据库</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [项目描述]全国事务所、分所的设立、变更、终止迁移及证书打印；股东合伙人管理；全国注师的注册、审批；各级财政用户审批；事务所、分所年度报备、业务报备；报表信息查询；行政处罚管理；公示公告管理
@@ -335,7 +335,7 @@
                                 [责任描述]负责Web系统设计、技术选择、基础框架搭建；核心功能编码、测试、维护
                                 <br/>
                                 <i class="fa fa-book" aria-hidden="true"></i>
-                                [自学内容]在项目中边学习边使用：Bootstrap+KnockoutJs+RequireJs+JQuery+Quartz 分布式定时任务+Memcached分布式开发，还有就是以前用的都是Eclipse，在项目中通过同事的帮助学习了Intellij Idea的使用，触类旁通，学会使用Webstorm；个人兴趣：Vue/Vuex/Vue Router+React+NodeJs+Express+Webpack+ES 6；也学习了Python，可以开发出一些实用的脚本了；也学习了Git的使用，这个就让我开始了自我放飞的代码生涯了；将自己平时积累的、遇到的问题公布到CSDN博客，和广大同袍分享；学习了Wireshark抓包工具还有Photoshop的使用。
+                                [自学内容]在项目中边学习边使用：Bootstrap + KnockoutJs + RequireJs + JQuery + Quartz 分布式定时任务 + Memcached分布式开发，还有就是以前用的都是Eclipse，在项目中通过同事的帮助学习了Intellij Idea的使用，触类旁通，学会使用Webstorm；个人兴趣：Vue/Vuex/Vue Router + React + NodeJs + Express + Webpack + ES 6；也学习了Python，可以开发出一些实用的脚本了；也学习了Git的使用，这个就让我开始了自我放飞的代码生涯了；将自己平时积累的、遇到的问题公布到CSDN博客，和广大同袍分享；学习了Wireshark抓包工具还有Photoshop的使用。
                             </li>
                         </ul>
                     </li>
@@ -346,7 +346,7 @@
                         </h3>
                         <ul class="info-content">
                             <li><i class="fa fa-cubes" aria-hidden="true"></i>
-                                [技术栈]：Hibernate+Quartz+Oracle数据库；公司F3平台
+                                [技术栈]：Hibernate + Quartz + Oracle数据库；公司F3平台
                             </li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
@@ -371,7 +371,7 @@
                         <ul class="info-content">
                             <li>
                                 <i class="fa fa-cubes" aria-hidden="true"></i>
-                                [技术栈]：微信JS-SDK+Jquery Mobile
+                                [技术栈]：微信JS-SDK + Jquery Mobile
                             </li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
@@ -395,7 +395,7 @@
                         </h3>
                         <ul class="info-content">
                             <li><i class="fa fa-cubes" aria-hidden="true"></i>
-                                [技术栈]：Spring+Spring MVC+Easy UI+MySQL 数据库+C#+MySQL 优化</li>
+                                [技术栈]：Spring + Spring MVC + Easy UI + MySQL 数据库 + C# + MySQL 优化</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [项目描述]福建省所有新能源车辆的实时、报警及注册数据通过其它车企平台接入福建省新能源汽车运行监控平台。实现对车辆的监控管理、车辆数据的统计分析和基础平台信息的管理等
@@ -418,7 +418,7 @@
                         </h3>
                         <ul class="info-content">
                             <li><i class="fa fa-cubes" aria-hidden="true"></i>
-                                [技术栈]：Spring+Spring MVC+Easy UI+解析SOS设备、船舶或者岸上基站上报的数据并批量保存到MySQL数据库中</li>
+                                [技术栈]：Spring + Spring MVC + Easy UI + 解析SOS设备、船舶或者岸上基站上报的数据并批量保存到MySQL数据库中</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [项目描述]船员携带的SOS设备落水后通过船或者岸上基站上报紧急信号，监控人员可以在web页面查看并采取紧急措施；船舶出港或进港会通过岸上基站上报位置信息，从而实现对船舶的进出港管理
@@ -441,7 +441,7 @@
                         </h3>
                         <ul class="info-content">
                             <li><i class="fa fa-cubes" aria-hidden="true"></i>
-                                [技术栈]：Spring+Spring MVC+Hibernate+ExtJs+Oralce 数据库+Quartz</li>
+                                [技术栈]：Spring + Spring MVC + Hibernate + ExtJs + Oralce 数据库 + Quartz</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [项目描述]通过车载终端上传企业或者车队的GPS或北斗信息，通过中间组件（鸿泉网关）经行实时数据入库，从而为车企用户提供车辆监控、数据统计分析、报警通知等服务
