--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <ul>
                     <li>
                         <label>个人简历</label>
-                        <span><a href="./assets/file/李欢欢_3年.pdf">李欢欢的简历</a></span>
+                        <span><a href="./assets/file/李欢欢_3年.pdf" target="_blank">李欢欢的简历</a></span>
                     </li>
                     <li>
                         <label>个人信息</label>
