--- a/index.html
+++ b/index.html
@@ -121,10 +121,6 @@
                         <a href="mailto:2776479680@qq.com" target="_blank">2776479680@qq.com</a>
                     </li>
                     <li>
-                        <label>个人主页</label>
-                        <a href="https://lihhz.gitee.io/resume/" target="_blank">lihhz.gitee.io/resume/</a>
-                    </li>
-                    <li>
                         <label>Github</label>
                         <a href="https://github.com/lihhz" target="_blank">github.com/lihhz</a>
                     </li>
@@ -144,6 +140,10 @@
                     <li>
                         <label>CSDN</label>
                         <a href="https://blog.csdn.net/qq_30682027" target="_blank">blog.csdn.net/qq_30682027</a>
+                    </li>
+                    <li>
+                        <label>个人主页</label>
+                        <a href="https://lihhz.gitee.io/" target="_blank">lihhz.gitee.io</a>
                     </li>
                 </ul>
             </section>
@@ -250,17 +250,15 @@
                             <li>熟悉VueJs、Vue Router、Vuex等</li>
                             <li>熟悉React</li>
                             <li>熟悉Html、JavaScript、CSS，熟悉前后端交互；熟悉ES6新特性</li>
-                            <li>了解nodejs；了解webpack、express的使用</li>
+                            <li>了解nodejs；了解webpack、express/koa、eggjs的使用</li>
                             <li>熟悉Git、SVN版本控制工具的使用</li>
                             <li>熟悉IE、Chrome、Firefox以及基于Ie和Chrome核心等浏览器下的调试技巧</li>
-                            <li>熟练掌握Java语言，有C#语言开发经验</li>
-                            <li>熟悉Spring、Spring MVC、Hibernate、Mybatis等框架的使用</li>
+                            <li>熟练掌握Java语言，熟悉Spring、Spring MVC、Hibernate、Mybatis等框架的使用</li>
                             <li>了解PhotoShop的使用，可以使用PhotoShop进行网页设计等</li>
                             <li>熟悉JQuery，有Easy UI、ExtJs、Bootstrap、KonckoutJs等前端框架的项目使用经验</li>
                             <li>熟悉Tomcat的使用，了解weblogic的使用</li>
                             <li>熟悉常用Linux命令，熟悉Ubuntu、Deepin等系统的工作环境搭建、常用编程软件使用</li>
                             <li>熟悉Oracle、Mysql、Sqlite，熟悉Sql语句及存储过程等，熟练使用PLSQL、Navicat、Sqldeveloper等工具的使用</li>
-                            <li>熟悉pl/sql编程</li>
                             <li>熟悉MVC、MVVM等开发模式</li>
                             <li>熟练使用Eclipse、MyEclipse、Intelij Idea、Webstrom等开发工具；了解Visual Studio</li>
                             <li>熟悉WireShark、iptool抓包工具的使用</li>
