给头像添加点击事件

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <span></span>
                     </div>
                     <!-- 头像照片 -->
-                    <img class="avatar" src="assets/images/avatar.jpg" onload="loading()">
+                    <img class="avatar" style="cursor: pointer;" title="点击查看博客" onclick="location.href='https://lihhz.gitee.io'" src="assets/images/avatar.jpg" onload="loading()">
                 </section>
 
                 <h1 class="name">李欢欢</h1>
@@ -483,7 +483,7 @@
                 <!--<a href="https://gitee.com/lihhz/resume" target="_blank">源代码</a>-->
             <!--</li>-->
             <li>
-                <a href="https://blog.csdn.net/qq_30682027" target="_blank">Blog</a>
+                <a href="https://lihhz.gitee.io" target="_blank">Blog</a>
             </li>
         </ul>
     </aside>
