--- a/index.html
+++ b/index.html
@@ -247,21 +247,21 @@
                 <ul>
                     <li style="list-style: none">
                         <ul class="info-content">
-                            <li>熟悉VueJs、Vue Router、Vuex等</li>
-                            <li>熟悉React</li>
                             <li>熟悉Html、JavaScript、CSS，熟悉前后端交互；熟悉ES6新特性</li>
-                            <li>了解nodejs；了解webpack、express/koa、eggjs的使用</li>
+                            <li>熟悉VueJs、Vue Router、Vuex等，熟悉React</li>
+                            <li>了解nodejs；了解webpack、koa、eggjs的使用</li>
                             <li>熟悉Git、SVN版本控制工具的使用</li>
                             <li>熟悉IE、Chrome、Firefox以及基于Ie和Chrome核心等浏览器下的调试技巧</li>
+                            <li>熟悉 JQuery、konckoutJs、requireJs 等前端 js 框架，有 easyui、ExtJs、Bootstrap 等前端 UI 框架的项目
+使用经验</li>
                             <li>熟练掌握Java语言，熟悉Spring、Spring MVC、Hibernate、Mybatis等框架的使用</li>
-                            <li>了解PhotoShop的使用，可以使用PhotoShop进行网页设计等</li>
-                            <li>熟悉JQuery，有Easy UI、ExtJs、Bootstrap、KonckoutJs等前端框架的项目使用经验</li>
                             <li>熟悉Tomcat的使用，了解weblogic的使用</li>
                             <li>熟悉常用Linux命令，熟悉Ubuntu、Deepin等系统的工作环境搭建、常用编程软件使用</li>
                             <li>熟悉Oracle、Mysql、Sqlite，熟悉Sql语句及存储过程等，熟练使用PLSQL、Navicat、Sqldeveloper等工具的使用</li>
                             <li>熟悉MVC、MVVM等开发模式</li>
                             <li>熟练使用Eclipse、MyEclipse、Intelij Idea、Webstrom等开发工具；了解Visual Studio</li>
                             <li>熟悉WireShark、iptool抓包工具的使用</li>
+                            <li>了解PhotoShop的使用，可以使用PhotoShop进行网页设计等</li>
                         </ul>
                     </li>
                 </ul>
@@ -333,7 +333,7 @@
                                 [责任描述]负责Web系统设计、技术选择、基础框架搭建；核心功能编码、测试、维护
                                 <br/>
                                 <i class="fa fa-book" aria-hidden="true"></i>
-                                [自学内容]在项目中边学习边使用：Bootstrap + KnockoutJs + RequireJs + JQuery + Quartz 分布式定时任务 + Memcached分布式开发，还有就是以前用的都是Eclipse，在项目中通过同事的帮助学习了Intellij Idea的使用，触类旁通，学会使用Webstorm；个人兴趣：Vue/Vuex/Vue Router + React + NodeJs + Express + Webpack + ES 6；也学习了Python，可以开发出一些实用的脚本了；也学习了Git的使用，这个就让我开始了自我放飞的代码生涯了；将自己平时积累的、遇到的问题公布到CSDN博客，和广大同袍分享；学习了Wireshark抓包工具还有Photoshop的使用。
+                                [自学内容]从头到尾的参与了该项目。在项目中边学习边使用：Bootstrap + KnockoutJs + RequireJs + JQuery + Quartz 分布式定时任务 + Memcached分布式开发，还有就是以前用的都是Eclipse，在项目中通过同事的帮助学习了Intellij Idea的使用，触类旁通，学会使用Webstorm；个人兴趣：Vue/Vuex/Vue Router + React + NodeJs + Express + Webpack + ES 6；也学习了Python，可以开发出一些实用的脚本了；也学习了Git的使用，这个就让我开始了自我放飞的代码生涯了；将自己平时积累的、遇到的问题公布到CSDN博客，和广大同袍分享；学习了Wireshark抓包工具还有Photoshop的使用。
                             </li>
                         </ul>
                     </li>
