--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
                     </li>
                     <li>
                         <label>出生年月</label>
-                        <span>1994-03-01</span>
+                        <span>1994-03</span>
+                    </li>
+                     <li>
+                        <label>婚姻状况</label>
+                        <span>未 婚</span>
                     </li>
                     <li>
                         <label>籍贯民族</label>
